kubernetes/usersService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-backend
  labels:
    app: users-backend
  namespace: tf-tutorial
spec:
  replicas: 1
  selector:
    matchLabels:
      name: users-backend
  template:
    metadata:
      labels:
        name: users-backend
    spec:
      containers:
      - name: users-backend-service
        imagePullPolicy: Always
        image: eldimious/users:latest
        ports:
          - containerPort: 3000
            protocol: TCP
