kubernetes/usersService/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tf-tutorial
  labels:
    app: users-service
  name: users-service
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    name: users-backend
